--- a/mobile.html
+++ b/mobile.html
@@ -16,7 +16,7 @@
         <div class="navbar">
             <div class="navbar-inner">
                 <div class="navbar-left">
-                    <a href="./index.html"><img src='./images/zomato.png' /></a>
+                    <a href="./index.php"><img src='./images/zomato.png' /></a>
                 </div>
                 <div class="navbar-right">
                     <div>Log in</div>
