--- a/mobile.html
+++ b/mobile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Restaurants - Delhi NCR Restaurants, Restaurants in Delhi NCR | Zomato India</title>
+        <title>Zomato Mobile</title>
         <link rel="shortcut icon" type="image/png" href="./images/logo.png">
         <link rel="stylesheet" href="./css/fifth-section.css">
         <link rel="stylesheet" href="./css/sixth-section.css">
